Java 9 specific tests - testing Hazelcast in modularized environment.